Prioritize bundle type instead of platform when defining pack task